2004-04-13  David Bolter  <david.bolter@utoronto.ca>

	* modulesets/gnome26.modules (gok): set branch to gnome-2-6.

2004-04-13  Fernando Herrera  <fherrera@onirica.com>

	* modulesets/gnome26.modules (bug-buddy): set branch to gnome-2-6.

2004-04-12  James Henstridge  <james@daa.com.au>

	* patches/libtool-1.4.2-multilib.patch:
	* patches/libtool-1.5.4-ltmain-SED.patch: update patches from
	latest Fedora devel RPM.

	* modulesets/bootstrap.modules: update to libtool-1.5.6.

	* modulesets/gnome26.modules (gconf-editor): set branch to gnome-2-6.

	* jhbuild/modtypes/base.py (CVSModule.do_check): add check phase
	for running test suites on modules.

	* jhbuild/config.py (_known_keys): add a makecheck config key.

	* jhbuild/modtypes/base.py (CVSModule.do_start): if makeclean,
	then go to stage clean (if we aren't running checkout or
	configure).
	(CVSModule.do_checkout): check if makeclean is set.
	(CVSModule.do_clean): add clean state.

2004-04-10  James Henstridge  <james@daa.com.au>

	* jhbuild/main.py (help): add some help text.

	* jhbuild/commands/info.py (do_info): add a "jhbuild info" routine
	that prints some information about a module.

2004-04-10  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome26.modules: Use gnome-2-6 branch for file-roller.

2004-04-10  James Henstridge  <james@daa.com.au>

	* modulesets/gnome28.modules: same changes here.

	* modulesets/gnome26.modules: add rules to build gnutls, needed
	for SSL support in libsoup.  Based on patch from sig@netdot.net
	(fixes bug #132167).

	* jhbuild/modtypes/tarball.py (parse_tarball): tarball
	dependencies weren't being handled quite right.

2004-04-08  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome26.modules, gnome28.modules: Removed duplicated
	gnome-mag section.
	* modulesets/gnome26.modules: Use gnome-2-6 branch for gnome-mag
	and gnome-terminal.

2004-04-07  James Henstridge  <james@daa.com.au>

	* modulesets/freedesktop.modules (hicolor-icon-theme): update to 0.5.
