@@ -1,15 +1,0 @@
-#!/usr/bin/env python
-
-import sys
-print ' *'
-print ' * jhbuild has been reorganised a fair bit, so you will need to'
-print ' * rerun "make install" in the jhbuild directory.'
-print ' *'
-print ' * Your configuration file should still work, but you might want'
-print ' * to review it anyway.'
-print ' *'
-print ' * If you find any regressions caused by the reorganisation,'
-print ' * please report them in bugzilla.'
-print ' *'
-sys.exit(1)
-
