@@ -1,3 +1,9 @@
+2004-04-14  James Henstridge  <james@daa.com.au>
+
+	* jhbuild.py: remove this file, since it wasn't being used
+	anymore.  After two months, most people should have seen the
+	message.
+
 2004-04-13  David Bolter  <david.bolter@utoronto.ca>
 
 	* modulesets/gnome26.modules (gok): set branch to gnome-2-6.
